# combinestupid

./: .gitignore  CMakeLists.txt
src/: main.cpp  main.h
src/commands/: get_info.cpp  get_info.h  help.cpp  help.h  iou.cpp  iou.h  owes_me.cpp  owes_me.h  pay.cpp  pay.h  set_info.cpp  set_info.h
src/states/: state_manager.cpp  state_manager.h  tracker.cpp  tracker.h  user_state.cpp  user_state.h
src/types/: shared.h  tracker_types.h
src/utils/: io_utils.cpp  io_utils.h
